<resources>
    <string name="app_name">Education App Maxim Svidrak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="folder">Folder</string>
    <string name="teach">Teach</string>
    <string name="_25">25</string>
    <string name="learnt">Learnt</string>
    <string name="start">Start</string>
    <string name="add">Add+</string>
    <string name="quick_note">Quick Note</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="save">Save</string>
    <string name="no_card">No questions available</string>
    <string name="chat_gpt">Chat GPT</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="welcome_to_chat_gpt_n_enter_your_question">Enter your question...</string>
    <string name="your_message">Your message...</string>
    <string name="flashcards">Flashcards</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="cards">Cards</string>
    <string name="name_of_folder">Name of Folder</string>
    <string name="all_folders">All folders</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign in</string>
    <string name="registered_already">Registered already? <font color="#2F70AF"> Log in</font></string>
    <string name="dont_have_an_account">Don\'t have an account? <font color="#2F70AF">Sign up</font></string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="logout">Logout</string>
    <string name="education_app">Education App</string>
    <string name="exampleemail_gmail_com">exampleEmail@gmail.com</string>
    <string name="select_the_folder">Select the folder</string>
    <string name="cards1">Cards</string>
    <string name="folders1">Folders</string>
    <string name="easy_n_cards">Easy \n Cards</string>
    <string name="question1">Question</string>
    <string name="our_mail_easycards_example_com">Our mail: easyCards@example.com</string>
    <string name="easy_cards">Easy Cards</string>
    <string name="personal_information">Personal information</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="update">Update</string>
    <string name="update_image">Update Image</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="statistics">Statistics</string>
    <string name="folders">Folders -</string>
    <string name="flashcards2">Flashcards -</string>
    <string name="the_folder_is_empty_n_select_another_folder_n_or_create_a_new_one">The folder is empty</string>
    <string name="total_days">Total days</string>
    <string name="_23">23</string>
    <string name="total_time">Total Time</string>
    <string name="create_a_new_folder">Create a new folder</string>
    <string name="create_a_new_cards">Create a new cards</string>
    <string name="the_folders_don_t_exist">The folders don\'t exist</string>
    <string name="create_a_folder">Create a folder</string>
    <string name="create_a_new_folder2">Create a new folder +</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="update_data">Update Data</string>
</resources>