<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/home_icon" />

        <item
            android:id="@+id/startFragment"
            android:title="@string/start"
            android:icon="@drawable/start_icon"/>

        <item
            android:id="@+id/addQuestionFragment"
            android:title="@string/add"
            android:icon="@drawable/add_icon"/>

        <item
            android:id="@+id/chatGPTFragment"
            android:title="@string/chat_gpt"
            android:icon="@drawable/chat_icon"/>

        <item
            android:id="@+id/folderFragment"
            android:title="@string/folder"
            android:icon="@drawable/folder_icon"/>

    </group>

    <item
        android:title="">
      <menu>
          <item
              android:id="@+id/loginFragment"
              android:icon="@drawable/logout_icon"
              android:title="@string/logout"/>


      </menu>




    </item>




</menu>