<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background6"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_start_answer"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginTop="98dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/braun"
            app:strokeWidth="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="top|center"
                android:text="@string/answer"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_start_click"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="84dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/blue"
            app:strokeWidth="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="top|center"
                android:text="@string/question"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </com.google.android.material.card.MaterialCardView>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_home_anim"
            android:layout_width="200dp"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="@+id/mcv_start_click"
            app:layout_constraintTop_toTopOf="@+id/mcv_start_click"
            app:lottie_fileName="home_anim.json"/>




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Start"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/start"
            android:background="@drawable/input_field"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcv_start_click"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blue"
            android:background="@drawable/input_field"
            android:textColor="@color/white"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Start" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_chatGPT"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blue"
            android:background="@drawable/input_field"
            android:textColor="@color/white"
            android:text="@string/chat_gpt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_folders"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blue"
            android:background="@drawable/input_field"
            android:textColor="@color/white"
            android:text="@string/folder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_chatGPT"
            tools:layout_editor_absoluteY="588dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>









</ScrollView>