<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="6dp"
    tools:context=".ui.ChatGPTFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folder"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_more_vert_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chatGPT"
        android:layout_above="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_chat_left"/>

    <TextView
        android:id="@+id/tv_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome_to_chat_gpt_n_enter_your_question"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/your_message"
            android:padding="12dp"
            android:layout_toLeftOf="@+id/ib_send"
            android:background="@drawable/rounded_corner"/>

        <ImageButton
            android:id="@+id/ib_send"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:padding="8dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/baseline_cancel_schedule_send_24"
            android:background="?attr/selectableItemBackground"/>



    </RelativeLayout>




</RelativeLayout>